DG-2009-02-11-0: Bugfix:     drmaa_redirect_lib problems on filesystems 
                             where root is mapped against nobody. 
                 Review:     CR

RD-2009-02-11-0: Enhancem.:  added jemalloc test
                 Review:     JG

CR-2009-02-11-0: Enhancem.:  Enhanced "shadowd_migrate" test to detect that
                             a shadowd is not running anymore.
                 Review:     MD

JG-2009-02-11-0: Enhamcem.:  improve handling of slow nfs in tight_integration
                             test
                 Review:     RD

AF-2009-02-09-0: Enhancem.:  New test for issue 612
                             slo/maxPendingJobs/parallelAndArrayJob
                 Review:     RH, TB

RD-2009-02-09-0: Bugfix:     - fixed qdel test
                             - removed wait_for_enter from IZ 2864
                 Enhancem.:  - soft_request test now uses queue seq_no
                 Review:     JG

JG-2009-02-06-0: Enhancem.:  enhanced qrstat -help test for testing IZ 2903.
                 Review:     RD

CR-2009-02-05-1: Cleanup:    o enhanced some timeouts for arco bigdecimal
                               test
                 Review:     AP

CR-2009-02-05-0: Bugfix:     o Fixed problem with environment setting when
                               using start_sge_bin()
                 Belongs to: CR-2009-02-04-0

CR-2009-02-04-0: Enhancem.:  o Added new test for IZ 2897 / CR 6799088:
                               system_tests/commlib/resolving/host_alias_file
                 Enhancem.:  o added environment parameter to start_sge_bin()
                 Review:     JG

JG-2009-02-04-0: Bugfix:     Removed a wait_for_enter from scheduler_messages
                             test + cleanup.
                 Review:     RD

EB-2009-02-03-0: Enhancent.: Added additional JSV test
                 Review:     MD

RH-2009-01-30-0: Bugfix:     Additional clusters did not work if user