@@ -1,3 +1,8 @@
+AP-2009-02-11-0: Bugfix:     - fixed arco tests, host_alias_file test
+                             - moved qrsh_output_contains procedure to the testsuite
+                               framework directory
+                 Review:     DG
+
 DG-2009-02-11-0: Bugfix:     drmaa_redirect_lib problems on filesystems 
                              where root is mapped against nobody. 
                  Review:     CR
